# Ur3e-Perception-moveit2-project

manipulation_project/get_cube_pose/: CMakeLists.txt  package.xml
manipulation_project/get_cube_pose/launch/: get_pose_client.launch.py
manipulation_project/get_cube_pose/rviz/: perception.rviz  perception_real.rviz
manipulation_project/get_cube_pose/src/: get_pose_client.cpp
manipulation_project/moveit2_scripts/: CMakeLists.txt  package.xml
manipulation_project/moveit2_scripts/launch/: pick_and_place.launch.py  pick_and_place_perception.launch.py  pick_and_place_perception_real.launch.py  transform.launch.py
manipulation_project/moveit2_scripts/src/: collision_objects.cpp  pick_and_place_perception.cpp  pick_and_place_perception_real.cpp  pick_place.cpp
manipulation_project/my_moveit_config/: .setup_assistant  package.xml
manipulation_project/my_moveit_config/config/: joint_limits.yaml  kinematics.yaml  name.srdf  scene.scene
manipulation_project/my_moveit_config/launch/: move_group.launch.py
manipulation_project/real_moveit_config/: .setup_assistant  package.xml
manipulation_project/real_moveit_config/config/: joint_limits.yaml  kinematics.yaml  name.srdf
manipulation_project/real_moveit_config/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
simple_grasping_ros2/simple_grasping/src/: basic_grasping_perception.cpp  object_support_segmentation.cpp
the_construct_office_gazebo/: CMakeLists.txt
the_construct_office_gazebo/launch/: empty_office.launch.xml  launch_2_baristas_nav2_batt.launch.xml  launch_baristas_nav2.launch.xml  main_one_robot.launch.xml  main_one_robot_slotcar.launch.xml  main_two_robots.launch.xml  main_two_robots_slotcar.launch.xml  main_two_robots_slotcar_batt.launch.xml  start_world.launch.py  start_world_standalone.launch.py
the_construct_office_gazebo/models/charging_station_v2/: model.config  model.sdf
the_construct_office_gazebo/models/charging_station_v2/blender/: charging_station.blend  charging_station.blend1
the_construct_office_gazebo/models/charging_station_v2/meshes/: charging_station_col_v2.stl  charging_station_visual_v2.dae
the_construct_office_gazebo/models/countertop/: model.config  model.sdf
the_construct_office_gazebo/models/countertop_2/: model.config  model.sdf
the_construct_office_gazebo/models/countertop_2/materials/scripts/: countertop_2.material
the_construct_office_gazebo/models/starbots_bartender_dispenser/: model.sdf
the_construct_office_gazebo/models/starbots_table_ingestor/: model.sdf
the_construct_office_gazebo/models/trapezium/: model.config  model.sdf
the_construct_office_gazebo/rmf_config/: starbots_complete.building.yaml  starbots_complete_copy.world
the_construct_office_gazebo/worlds/: starbots_complete.world
